# appstore-metadata-extractor-python

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  MANIFEST.in  Makefile  PUBLISHING.md  README.md  combined_extractor_output.json  combined_output.json  dev-setup.sh  pyproject.toml  requirements-dev.txt  requirements.txt  wbs_report.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
examples/: apps.json  async_batch.py  basic_usage.py  monitor_changes.py
src/appstore_metadata_extractor/: __init__.py  cli.py  combined_scraper.py  models.py  models_combined.py  scraper.py  settings.py  wbs_extractor.py
src/appstore_metadata_extractor/cli/: commands.py
src/appstore_metadata_extractor/core/: __init__.py  cache.py  client.py  extractors.py  models.py  rankings.py  reviews.py  search.py  security.py  wbs_validator.py
tests/: conftest.py
tests/fixtures/: chart_top_free_us.json  reviews_whatsapp_page1.json  search_habit_tracker.json
tests/integration/: test_change_monitoring.py  test_combined_extractor_integration.py  test_combined_scraper.py  test_language_extraction.py  test_platform_specific_screenshots.py  test_rankings_real.py  test_reviews_real.py  test_screenshot_validation.py  test_search_real.py  test_wbs_extractor.py
tests/unit/: test_combined_extractor.py  test_composite_client.py  test_core_modules.py  test_extractors_clean.py  test_models.py  test_rankings.py  test_reviews.py  test_search.py
